--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header">
                
                 <a href="" class="logo">
-                    <img src="C:\Users\ADMIN\Desktop\PRACTICALS\Portfolio-Website-master\files\Shalini1.png" alt="" class="signature">
+                    <img src="files\Shalini1.png" alt="" class="signature">
                     <i class="fa fa-bolt"></i>
                 </a>
                    
